--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "type": "git",
     "url": "https://github.com/stelliajs/cli.git"
   },
+  "bin": {
+    "stellia": "./src/cli/create-stellia-app.js"
+  },
   "author": "Tweenty_",
   "license": "ISC",
   "description": "CLI for StelliaJS framework",
   "keywords": ["discord", "bot", "discordjs", "typescript", "framework", "stelliajs"],
+  "dependencies": {
+    "yargs": "^17.7.2",
+    "find-up": "^7.0.0"
+  },
   "devDependencies": {
     "@types/node": "^20.14.11"
   },
