--- a/src/templates/bot/package.json
+++ b/src/templates/bot/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "keywords": ["discord", "bot", "discordjs", "typescript", "framework", "stelliajs"],
   "dependencies": {
+    "@stelliajs/cli": "^0.0.1",
     "@stelliajs/framework": "^1.0.6",
     "discord-api-types": "^0.37.92",
     "discord.js": "^14.15.3",
