--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "CLI for StelliaJS framework",
   "keywords": ["discord", "bot", "discordjs", "typescript", "framework", "stelliajs"],
   "dependencies": {
+    "discord.js": "^14.15.3",
     "yargs": "^17.7.2",
     "find-up": "^7.0.0"
   },
