--- a/src/templates/bot-with-environments/tsconfig.json
+++ b/src/templates/bot-with-environments/tsconfig.json
@@ -14,6 +14,9 @@
       "@commands/*": [
         "./src/commands/*"
       ],
+      "@environments/*": [
+        "./src/environments/*"
+      ],
       "@events/*": [
         "./src/events/*"
       ],
